# V1720ADCAnalyzer

./: .clangd  .gitignore  CMakeLists.txt  Min_ADC_val_combined.cpp  Min_Sample_combined.cpp  NotesOnThisProject.txt  V1720FileSetup.cxx  V1720FileSetup.h  V1720_LinkDef.h  rebuild_V1720.sh  root_tree_create_v3.cpp  test.cpp
install/lib/: libV1720.rootmap  libV1720_rdict.pcm
